firmware/lib/control-table/tests/ui/compare_on_ro.rs
use control_table::Block;

#[repr(C)]
#[derive(Block)]
struct CompareOnRo {
    #[ct_field(access = ro, le = 10u8)]
    x: u8,
}

fn main() {}
